SEOBNR: update initial conditions.  Includes interpolation routine, but NQC corrections are not complete.

--- a/Tutorial-SEOBNR_Factorized_Modes.ipynb
+++ b/Tutorial-SEOBNR_Factorized_Modes.ipynb
@@ -6,28 +6,29 @@
    "source": [
     "# The Spinning Effective One-Body Factorized Modes\n",
     "\n",
-    "### Author: Tyler Knowles\n",
+    "## Author: Tyler Knowles\n",
     "\n",
     "## This module documents the reduced spinning effective one-body factorized modes as numerically implemented in LALSuite's SEOBNRv3 gravitational waveform approximant.  That is, we follow the appendix of of [Taracchini, et. al. (2012)](https://arxiv.org/abs/1202.0790).\n",
     "\n",
-    "### Throughout this module, we will refer to\n",
-    "* [Taracchini, et. al. (2012)](https://arxiv.org/abs/1202.0790) as T2012,\n",
-    "* [Pan, et. al (2011)](https://arxiv.org/abs/1006.0431) as P2011, and\n",
-    "* [Damour, et. al. (2009)](https://arxiv.org/abs/0811.2069v2) as D2009.\n",
     "\n",
-    "<font color='green'>**This module has been validated against the LALSuite SEOBNRv3/SEOBNRv3_opt code that was reviewed and approved for LIGO parameter estimation by the LIGO Scientific Collaboration.**</font>\n",
+    "**Module Status:** <font color='red'><b> In progress </b></font>\n",
     "\n",
-    "<a id='intro'></a>\n",
+    "**Validation Notes:** This module is under active development -- do ***not*** use the resulting code for scientific applications.  In the future, this module will be validated against the LALSuite [SEOBNRv3/SEOBNRv3_opt code]( https://git.ligo.org/lscsoft/lalsuite.) that was reviewed and approved for LIGO parameter estimation by the LIGO Scientific Collaboration.\n",
     "\n",
-    "# Introduction: The Physical System of Interest \\[Back to [top](#toc)\\]\n",
-    "$$\\label{intro}$$\n",
+    "\n",
+    "## Introduction\n",
+    "### The Physical System of Interest\n",
     "\n",
     "Consider two compact objects (e.g. black holes or neutron stars) with masses $m_{1}$, $m_{2}$ (in solar masses) and spin angular momenta ${\\bf S}_{1}$, ${\\bf S}_{2}$ in a binary system.  The spinning effective one-body (\"SEOB\") Hamiltonian $H_{\\rm real}$ (see [BB2010](https://arxiv.org/abs/0912.3517) Equation (5.69)) describes the dynamics of this system.  We seek to computed the factorized modes for this system, as described in the appendix of [T2012](https://arxiv.org/abs/1202.0790).\n",
     "\n",
     "This routine takes as input\n",
     "1. the masses $m_{1}$, $m_{2}$,\n",
     "1. the symmetic mass ratio $\\eta$ and Kerr spin parameter $a$, and\n",
-    "1. dimensionless spin parameters $\\chi_{A}$, $\\chi_{S}$."
+    "1. dimensionless spin parameters $\\chi_{A}$, $\\chi_{S}$.\n",
+    "\n",
+    "### Citations\n",
+    "Throughout this module, we will refer to\n",
+    "* [Taracchini, et. al. (2012)](https://arxiv.org/abs/1202.0790) as T2012."
    ]
   },
   {
@@ -44,12 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy as sp\n",
-    "m1,m2,eta,chiS,chiA,a = sp.symbols(\"m1 m2 eta chiS chiA a\",real=True)"
+    "# The resummed factorized modes for the spinning effective one-body formulation\n",
+    "# See Taracchini et. al. (2012): https://arxiv.org/abs/1202.0790\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "#Input variables: will eventually want to read in from another file?\n",
+    "m1 = 10.\n",
+    "m2 = 15.\n",
+    "eta = 0.24000000000000002\n",
+    "chiS = 0.020800681907460566\n",
+    "chiA = -0.05685619431741816\n",
+    "a = 0.01024299840812406"
    ]
   },
   {
@@ -58,10 +69,10 @@
    "source": [
     "<a id='deltam'></a>\n",
     "\n",
-    "# Common term $\\delta m$ \\[Back to [top](#toc)\\]\n",
+    "# Common terms \\[Back to [top](#toc)\\]\n",
     "$$\\label{deltam}$$\n",
     "\n",
-    "From [T2012](https://arxiv.org/abs/1202.0790) Equation (A7a):\n",
+    "We define the following terms that are used repeatedly in the factorized modes.  From [T2012](https://arxiv.org/abs/1202.0790) Equation (A7a):\n",
     "\n",
     "\\begin{equation*}\n",
     "    \\delta m = \\frac{ m_{1} - m_{2} }{ m_{1} + m_{2} }.\n",
@@ -95,14 +106,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='rho22'></a>\n",
+    "<a id='modes'></a>\n",
     "\n",
-    "## The 2,2 mode $\\rho_{22}$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{rho22}$$\n",
+    "## The factorized modes\n",
+    "$$\\label{modes}$$\n",
     "\n",
-    "<font color='red'>Need to find a reference for the 1./2. * (chiS + chiA * deltam) term in rho22v4, the term rho22v5, the (89. * a * a)/252. term of rho22v6 (and why we don't include 428 * eulerlog2(v2)/105 as in T2012),.</font>\n",
+    "We will write the coefficient (on each power of $v$) separately, following the formulation in [T2012](https://arxiv.org/abs/1202.0790) Equation (A8a):\n",
     "\n",
-    "We will write the coefficient (on each power of $v$) separately, following the formulation in [T2012](https://arxiv.org/abs/1202.0790) Equation (A8a):"
+    "<font color='red'>Need to find a reference for the 1./2. * (chiS + chiA * deltam) term in rho22v4, the term rho22v5, the (89. * a * a)/252. term of rho22v6 (and why we don't include 428 * eulerlog2(v2)/105 as in T2012)... these terms are not properly documented in the LALSuite code.</font>"
    ]
   },
   {
@@ -116,23 +127,16 @@
     "rho22v4 = 1./2.*(chiS + chiA*deltam) + 19583.*eta2/42336. - 33025.*eta/21168. - 20555./10584.\n",
     "rho22v5 = -34.*a/21.\n",
     "rho22v6 = (1556919113./122245200. + (89.*a2)/252. - (48993925.*eta)/9779616. - (6292061.*eta2)/3259872.\n",
-    "           + (10620745.*eta3)/39118464. + (41.*eta*sp.pi*sp.pi)/192.)\n",
+    "           + (10620745.*eta3)/39118464. + (41.*eta*np.pi*np.pi)/192.)\n",
     "rho22v6l = -428./105.\n",
     "rho22v7 = (18733.*a)/15876. + a3/3.\n",
     "rho22v8 = -387216563023./160190110080. + (18353.*a2)/21168. - a*4/8.\n",
     "rho22v8l = 9202./2205.\n",
     "rho22v10 = -16094530514677./533967033600.\n",
-    "rho22v10l = 439877./55566."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "rho22v10l = 439877./55566.\n",
+    "\n",
     "rho21v1 = 0.0\n",
-    "ho21v2 = -59./56. + (23.*eta)/84.\n",
+    "rho21v2 = -59./56. + (23.*eta)/84.\n",
     "rho21v3 = 0.\n",
     "rho21v4 = -47009./56448. - (865.*a2)/1792. - (405.*a4)/2048. - (10993.*eta)/14112. + (617.*eta2)/4704.\n",
     "rho21v5 = (-98635.*a)/75264. + (2031.*a3)/7168. - (1701.*a5)/8192.\n",
@@ -161,10 +165,10 @@
     "f33v3 = (chiS*deltam*(-4. + 5.*eta) + chiA*(-4. + 19.*eta))/(2.*deltam)\n",
     "\n",
     "rho32v = (4.*chiS*eta)/(-3.*(m1 + 3*eta))\n",
-    "rho32v2 = (-4.*a2*eta2)/(9.*sp.Pow(m1 + 3*eta,2)) + (328. - 1115.*eta + 320.*eta2)/(270.*m1p3eta)\n",
+    "rho32v2 = (-4.*a2*eta2)/(9.*np.power(m1 + 3*eta,2)) + (328. - 1115.*eta + 320.*eta2)/(270.*m1p3eta)\n",
     "rho32v3 = 2./9.*a\n",
     "rho32v4 = a2/3. + (-1444528. + 8050045.*eta - 4725605.*eta2 - 20338960.*eta3\n",
-    "                   + 3085640.*eta4)/sp.Pow(1603800.*m1p3eta,2)\n",
+    "                   + 3085640.*eta4)/np.power(1603800.*m1p3eta,2)\n",
     "rho32v5 = (-2788.*a)/1215.\n",
     "rho32v6 = 5849948554./940355325. + (488.*a2)/405.\n",
     "rho32v6l = -104./63.\n",
@@ -186,7 +190,7 @@
     "rho44v2 = (1614. - 5870.*eta + 2625.*eta2)/(1320.*m1p3eta)\n",
     "rho44v3 = (chiA * (10. - 39.*eta)*deltam + chiS * (10. - 41.*eta + 42.*eta2)) / (15.*m1p3eta)\n",
     "rho44v4 = a2/2. + (-511573572. + 2338945704.*eta - 313857376.*eta2 - 6733146000. * eta3 +\n",
-    "                   1252563795.*eta4)/(317116800.*sp.Pow(m1p3eta,2))\n",
+    "                   1252563795.*eta4)/(317116800.*np.power(m1p3eta,2))\n",
     "rho44v5 = (-69.*a)/55.\n",
     "rho44v6 = 16600939332793./1098809712000. + (217.*a2)/3960.\n",
     "rho44v6l = -12568./3465.\n",
@@ -311,21 +315,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
