Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis: whitespace improvements. Also add a bit more debugging output

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
@@ -909,19 +909,19 @@
     "    for(int k=1;k<cctk_lsh[2];k++) for(int j=1;j<cctk_lsh[1];j++) for(int i=0;i<cctk_lsh[0];i++) {\n",
     "        int index=CCTK_GFINDEX3D(cctkGH,i,j,k);\n",
     "        Ax_unstaggered[index] = 0.25*(Ax[CCTK_GFINDEX3D(cctkGH,i,j,k)]     + Ax[CCTK_GFINDEX3D(cctkGH,i,j-1,k)] +\n",
-    "                                        Ax[CCTK_GFINDEX3D(cctkGH,i,j-1,k-1)] + Ax[CCTK_GFINDEX3D(cctkGH,i,j,k-1)]);\n",
+    "                                      Ax[CCTK_GFINDEX3D(cctkGH,i,j-1,k-1)] + Ax[CCTK_GFINDEX3D(cctkGH,i,j,k-1)]);\n",
     "    }\n",
     "#pragma omp parallel for\n",
     "    for(int k=1;k<cctk_lsh[2];k++) for(int j=0;j<cctk_lsh[1];j++) for(int i=1;i<cctk_lsh[0];i++) {\n",
     "        int index=CCTK_GFINDEX3D(cctkGH,i,j,k);\n",
     "        Ay_unstaggered[index] = 0.25*(Ay[CCTK_GFINDEX3D(cctkGH,i,j,k)]     + Ay[CCTK_GFINDEX3D(cctkGH,i-1,j,k)] +\n",
-    "                                        Ay[CCTK_GFINDEX3D(cctkGH,i-1,j,k-1)] + Ay[CCTK_GFINDEX3D(cctkGH,i,j,k-1)]);\n",
+    "                                      Ay[CCTK_GFINDEX3D(cctkGH,i-1,j,k-1)] + Ay[CCTK_GFINDEX3D(cctkGH,i,j,k-1)]);\n",
     "    }\n",
     "#pragma omp parallel for\n",
     "    for(int k=0;k<cctk_lsh[2];k++) for(int j=1;j<cctk_lsh[1];j++) for(int i=1;i<cctk_lsh[0];i++) {\n",
     "        int index=CCTK_GFINDEX3D(cctkGH,i,j,k);\n",
     "        Az_unstaggered[index] = 0.25*(Az[CCTK_GFINDEX3D(cctkGH,i,j,k)]     + Az[CCTK_GFINDEX3D(cctkGH,i-1,j,k)] +\n",
-    "                                        Az[CCTK_GFINDEX3D(cctkGH,i-1,j-1,k)] + Az[CCTK_GFINDEX3D(cctkGH,i,j-1,k)]);\n",
+    "                                      Az[CCTK_GFINDEX3D(cctkGH,i-1,j-1,k)] + Az[CCTK_GFINDEX3D(cctkGH,i,j-1,k)]);\n",
     "    }\n",
     "}"
    ]
@@ -1461,6 +1461,7 @@
     "void construct_function_to_interpolate__store_to_interped_gf(CCTK_ARGUMENTS) {\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
+    "  printf(\"Called construct_function_to_interpolate__store_to_interped_gf() on grid with dx = %e!\\n\",CCTK_DELTA_SPACE(0));\n",
     "  const CCTK_REAL invdx0 = 1.0 / CCTK_DELTA_SPACE(0);\n",
     "  const CCTK_REAL invdx1 = 1.0 / CCTK_DELTA_SPACE(1);\n",
     "  const CCTK_REAL invdx2 = 1.0 / CCTK_DELTA_SPACE(2);\n",
@@ -1952,7 +1953,7 @@
     "{\n",
     "  STORAGE: interpolation_gf[3],InterpCounterVar,interp_pointcoords_and_output_arrays\n",
     "  OPTIONS: GLOBAL,LOOP-LOCAL\n",
-    "  SYNC: interpolation_gf\n",
+    "  SYNC:    interpolation_gf\n",
     "  LANG: C\n",
     "} \"Construct the function to interpolate\"\n",
     "\n",
