--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
@@ -482,7 +482,7 @@
     "  // Perform interpolation only at iteration == interp_out_iteration:\n",
     "  if(cctk_iteration != interp_out_iteration) return;\n",
     "\n",
-    "  // Set up spherically sampled interpolation grid arrays points_x,points_y,points_z: \n",
+    "  // Set up spherically sampled interpolation grid arrays points_x,points_y,points_z:\n",
     "  sph_grid_Interpolate_many_pts__set_interp_pts(CCTK_PASS_CTOC);\n",
     "\n",
     "  // Set up output array:\n",
@@ -499,13 +499,13 @@
     "  // Perform interpolation!\n",
     "for(int order=1; order <= 4; order *=2) {\n",
     "    char gf_name[100];\n",
-    "    get_gf_name(*InterpCounter,gf_name);\n",
     "    // 4-metric & 4-Christoffels are only output if order==4.\n",
     "    if( (strncmp(gf_name,\"4-\",2) != 0) || (strncmp(gf_name,\"4-\",2) == 0 && order==4) ) {\n",
-    "        printf(\"Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
-    "        Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
-    "                                points_x,points_y,points_z, input_array_names, output_f);\n",
     "        if(CCTK_MyProc(cctkGH)==0) {\n",
+    "            get_gf_name(*InterpCounter,gf_name);\n",
+    "            printf(\"Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
+    "            Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
+    "                                    points_x,points_y,points_z, input_array_names, output_f);\n",
     "#pragma omp parallel for\n",
     "            for(int i=0;i<N0*N1*N2;i++) {\n",
     "                if(output_f[0][i] > 1e20) {\n",
@@ -518,6 +518,8 @@
     "            time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
+    "            Interpolate_to_sph_grid(cctkGH, 0, order,\n",
+    "                                    NULL,NULL,NULL, input_array_names, NULL);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
     "        } // END if(CCTK_MyProc(cctkGH)==0)\n",
     "    } // END if( (strncmp(gf_name,\"4-\",2) != 0) || (strncmp(gf_name,\"4-\",2) == 0 && order==4) ) {\n",
@@ -526,14 +528,14 @@
     "//   faces (i-1/2,j,k), (i,j-1/2,k), (i,j,k-1/2) and corners (i-1/2,j-1/2,k-1/2)\n",
     "for(int order=4; order <= 4; order *=2) {\n",
     "    char gf_name[100];\n",
-    "    get_gf_name(*InterpCounter,gf_name);\n",
     "    if(strncmp(gf_name,\"4-metric\",8) == 0) {\n",
     "        //  FACEIM\n",
-    "        printf(\"faceim: Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
-    "        Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
-    "                                faceim_points_x,faceim_points_y,faceim_points_z, input_array_names, output_f);\n",
-    "        snprintf(gf_name,100,\"faceim (i-1/2,j,k): %s\",gf_name);\n",
     "        if(CCTK_MyProc(cctkGH)==0) {\n",
+    "            get_gf_name(*InterpCounter,gf_name);\n",
+    "            printf(\"faceim: Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
+    "            Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
+    "                                    faceim_points_x,faceim_points_y,faceim_points_z, input_array_names, output_f);\n",
+    "            snprintf(gf_name,100,\"faceim (i-1/2,j,k): %s\",gf_name);\n",
     "#pragma omp parallel for\n",
     "            for(int i=0;i<N0*N1*N2;i++) {\n",
     "                if(output_f[0][i] > 1e20) {\n",
@@ -546,16 +548,18 @@
     "            time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
+    "            Interpolate_to_sph_grid(cctkGH, 0, order,\n",
+    "                                    NULL,NULL,NULL, input_array_names, NULL);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
     "        }\n",
     "\n",
     "        //  FACEJM\n",
-    "        get_gf_name(*InterpCounter,gf_name); // Reset gf_name\n",
-    "        printf(\"facejm: Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
-    "        Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
-    "                                facejm_points_x,facejm_points_y,facejm_points_z, input_array_names, output_f);\n",
-    "        snprintf(gf_name,100,\"facejm (i,j-1/2,k): %s\",gf_name);\n",
     "        if(CCTK_MyProc(cctkGH)==0) {\n",
+    "            get_gf_name(*InterpCounter,gf_name); // Reset gf_name\n",
+    "            printf(\"facejm: Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
+    "            Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
+    "                                    facejm_points_x,facejm_points_y,facejm_points_z, input_array_names, output_f);\n",
+    "            snprintf(gf_name,100,\"facejm (i,j-1/2,k): %s\",gf_name);\n",
     "#pragma omp parallel for\n",
     "            for(int i=0;i<N0*N1*N2;i++) {\n",
     "                if(output_f[0][i] > 1e20) {\n",
@@ -568,16 +572,18 @@
     "            time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
+    "            Interpolate_to_sph_grid(cctkGH, 0, order,\n",
+    "                                    NULL,NULL,NULL, input_array_names, NULL);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
     "        }\n",
     "\n",
     "        //  FACEKM\n",
-    "        get_gf_name(*InterpCounter,gf_name); // Reset gf_name\n",
-    "        printf(\"facekm: Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
-    "        Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
-    "                                facekm_points_x,facekm_points_y,facekm_points_z, input_array_names, output_f);\n",
-    "        snprintf(gf_name,100,\"facekm (i,j,k-1/2): %s\",gf_name);\n",
     "        if(CCTK_MyProc(cctkGH)==0) {\n",
+    "            get_gf_name(*InterpCounter,gf_name); // Reset gf_name\n",
+    "            printf(\"facekm: Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
+    "            Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
+    "                                    facekm_points_x,facekm_points_y,facekm_points_z, input_array_names, output_f);\n",
+    "            snprintf(gf_name,100,\"facekm (i,j,k-1/2): %s\",gf_name);\n",
     "#pragma omp parallel for\n",
     "            for(int i=0;i<N0*N1*N2;i++) {\n",
     "                if(output_f[0][i] > 1e20) {\n",
@@ -590,16 +596,18 @@
     "            time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
+    "            Interpolate_to_sph_grid(cctkGH, 0, order,\n",
+    "                                    NULL,NULL,NULL, input_array_names, NULL);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
     "        }\n",
     "\n",
     "        //  CORNER\n",
-    "        get_gf_name(*InterpCounter,gf_name); // Reset gf_name\n",
-    "        printf(\"Corner: Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
-    "        Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
-    "                                corner_points_x,corner_points_y,corner_points_z, input_array_names, output_f);\n",
-    "        snprintf(gf_name,100,\"cornr (i-1/2,j-1/2,k-1/2): %s\",gf_name);\n",
     "        if(CCTK_MyProc(cctkGH)==0) {\n",
+    "            get_gf_name(*InterpCounter,gf_name); // Reset gf_name\n",
+    "            printf(\"Corner: Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
+    "            Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
+    "                                    corner_points_x,corner_points_y,corner_points_z, input_array_names, output_f);\n",
+    "            snprintf(gf_name,100,\"cornr (i-1/2,j-1/2,k-1/2): %s\",gf_name);\n",
     "#pragma omp parallel for\n",
     "            for(int i=0;i<N0*N1*N2;i++) {\n",
     "                if(output_f[0][i] > 1e20) {\n",
@@ -612,6 +620,8 @@
     "            time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
+    "            Interpolate_to_sph_grid(cctkGH, 0, order,\n",
+    "                                    NULL,NULL,NULL, input_array_names, NULL);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
     "        }\n",
     "    } // END if(strncmp(gf_name,\"4-\",2) == 0)\n",
