Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis: Experiment - disable interpolation on procs != 0.

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
@@ -518,7 +518,7 @@
     "            time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
-    "            CCTK_REAL *oneptx = 0.0;CCTK_REAL *onepty = 0.0;CCTK_REAL *oneptz = 0.0;CCTK_REAL *outfnc;\n",
+    "            CCTK_REAL oneptx[1] = {0.0};CCTK_REAL onepty[1] = {0.0};CCTK_REAL oneptz[1] = {0.0};CCTK_REAL outfnc[1] = {0.0};\n",
     "            Interpolate_to_sph_grid(cctkGH, 1, order,\n",
     "                                    oneptx,onepty,oneptz, input_array_names, outfnc);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
@@ -549,7 +549,7 @@
     "            time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
-    "            CCTK_REAL *oneptx = 0.0;CCTK_REAL *onepty = 0.0;CCTK_REAL *oneptz = 0.0;CCTK_REAL *outfnc;\n",
+    "            CCTK_REAL oneptx[1] = {0.0};CCTK_REAL onepty[1] = {0.0};CCTK_REAL oneptz[1] = {0.0};CCTK_REAL outfnc[1] = {0.0};\n",
     "            Interpolate_to_sph_grid(cctkGH, 1, order,\n",
     "                                    oneptx,onepty,oneptz, input_array_names, outfnc);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
@@ -574,7 +574,7 @@
     "            time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
-    "            CCTK_REAL *oneptx = 0.0;CCTK_REAL *onepty = 0.0;CCTK_REAL *oneptz = 0.0;CCTK_REAL *outfnc;\n",
+    "            CCTK_REAL oneptx[1] = {0.0};CCTK_REAL onepty[1] = {0.0};CCTK_REAL oneptz[1] = {0.0};CCTK_REAL outfnc[1] = {0.0};\n",
     "            Interpolate_to_sph_grid(cctkGH, 1, order,\n",
     "                                    oneptx,onepty,oneptz, input_array_names, outfnc);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
@@ -599,7 +599,7 @@
     "            time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
-    "            CCTK_REAL *oneptx = 0.0;CCTK_REAL *onepty = 0.0;CCTK_REAL *oneptz = 0.0;CCTK_REAL *outfnc;\n",
+    "            CCTK_REAL oneptx[1] = {0.0};CCTK_REAL onepty[1] = {0.0};CCTK_REAL oneptz[1] = {0.0};CCTK_REAL outfnc[1] = {0.0};\n",
     "            Interpolate_to_sph_grid(cctkGH, 1, order,\n",
     "                                    oneptx,onepty,oneptz, input_array_names, outfnc);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
@@ -624,7 +624,7 @@
     "            time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
-    "            CCTK_REAL *oneptx = 0.0;CCTK_REAL *onepty = 0.0;CCTK_REAL *oneptz = 0.0;CCTK_REAL *outfnc;\n",
+    "            CCTK_REAL oneptx[1] = {0.0};CCTK_REAL onepty[1] = {0.0};CCTK_REAL oneptz[1] = {0.0};CCTK_REAL outfnc[1] = {0.0};\n",
     "            Interpolate_to_sph_grid(cctkGH, 1, order,\n",
     "                                    oneptx,onepty,oneptz, input_array_names, outfnc);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
