--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
@@ -497,7 +497,7 @@
     "  CCTK_REAL time_in_seconds;\n",
     "\n",
     "  // Perform interpolation!\n",
-    "CCTK_REAL oneptx[1] = {0.0};CCTK_REAL onepty[1] = {0.0};CCTK_REAL oneptz[1] = {0.0};CCTK_REAL **outfnc;\n",
+    "//CCTK_REAL oneptx[1] = {0.0};CCTK_REAL onepty[1] = {0.0};CCTK_REAL oneptz[1] = {0.0};CCTK_REAL **outfnc;\n",
     "for(int order=1; order <= 4; order *=2) {\n",
     "    char gf_name[100];\n",
     "    // 4-metric & 4-Christoffels are only output if order==4.\n",
@@ -520,7 +520,7 @@
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
     "            Interpolate_to_sph_grid(cctkGH, 0, order,\n",
-    "                                    points_x,points_y,points_z, input_array_names, output_f);\n",
+    "                                    NULL,NULL,NULL,NULL,NULL);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
     "        } // END if(CCTK_MyProc(cctkGH)==0)\n",
     "    } // END if( (strncmp(gf_name,\"4-\",2) != 0) || (strncmp(gf_name,\"4-\",2) == 0 && order==4) ) {\n",
@@ -550,7 +550,8 @@
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
     "            Interpolate_to_sph_grid(cctkGH, 0, order,\n",
-    "                                    faceim_points_x,faceim_points_y,faceim_points_z, input_array_names, output_f);\n",
+    "                                    NULL,NULL,NULL,NULL,NULL);\n",
+    "//                                    faceim_points_x,faceim_points_y,faceim_points_z, input_array_names, output_f);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
     "        }\n",
     "\n",
@@ -574,7 +575,7 @@
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
     "            Interpolate_to_sph_grid(cctkGH, 0, order,\n",
-    "                                    facejm_points_x,facejm_points_y,facejm_points_z, input_array_names, output_f);\n",
+    "                                    NULL,NULL,NULL,NULL,NULL);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
     "        }\n",
     "\n",
@@ -598,7 +599,7 @@
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
     "            Interpolate_to_sph_grid(cctkGH, 0, order,\n",
-    "                                    facekm_points_x,facekm_points_y,facekm_points_z, input_array_names, output_f);\n",
+    "                                    NULL,NULL,NULL,NULL,NULL);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
     "        }\n",
     "\n",
@@ -622,7 +623,7 @@
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
     "            Interpolate_to_sph_grid(cctkGH, 0, order,\n",
-    "                                    corner_points_x,corner_points_y,corner_points_z, input_array_names, output_f);\n",
+    "                                    NULL,NULL,NULL,NULL,NULL);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
     "        }\n",
     "    } // END if(strncmp(gf_name,\"4-\",2) == 0)\n",
