Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis: Continue work on experiment - disable interpolation on procs != 0.

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
@@ -131,6 +131,7 @@
     "\n",
     "  CCTK_STRING coord_system = \"cart3d\";\n",
     "\n",
+    "  for(int i=0;i<100;i++) printf(\"HEY0!\")\n",
     "  // Set up handles\n",
     "  const CCTK_INT coord_system_handle = CCTK_CoordSystemHandle(coord_system);\n",
     "  if (coord_system_handle < 0) {\n",
@@ -138,6 +139,7 @@
     "        \"can't get coordinate system handle for coordinate system \\\"%s\\\"!\",\n",
     "               coord_system);\n",
     "  }\n",
+    "  for(int i=0;i<100;i++) printf(\"HEY1!\")\n",
     "\n",
     "  const CCTK_INT operator_handle = CCTK_InterpHandle(interpolator_name);\n",
     "  if (operator_handle < 0)\n",
@@ -154,6 +156,7 @@
     "               \"bad interpolator parameter(s) \\\"%s\\\"!\",\n",
     "               interpolator_pars);\n",
     "  }\n",
+    "  for(int i=0;i<100;i++) printf(\"HEY2!\")\n",
     "  \n",
     "  CCTK_INT operand_indices[NUM_INPUT_ARRAYS]; //NUM_OUTPUT_ARRAYS + MAX_NUMBER_EXTRAS];\n",
     "  for(int i = 0 ; i < NUM_INPUT_ARRAYS  ; i++) {\n",
@@ -162,6 +165,7 @@
     "  Util_TableSetIntArray(param_table_handle, NUM_OUTPUT_ARRAYS,\n",
     "                        operand_indices, \"operand_indices\");\n",
     "  \n",
+    "  for(int i=0;i<100;i++) printf(\"HEY3!\")\n",
     "\n",
     "  CCTK_INT operation_codes[NUM_INPUT_ARRAYS];\n",
     "  for(int i = 0 ; i < NUM_INPUT_ARRAYS  ; i++) {\n",
@@ -170,6 +174,7 @@
     "  Util_TableSetIntArray(param_table_handle, NUM_OUTPUT_ARRAYS, \n",
     "                        operation_codes, \"operation_codes\");\n",
     "\n",
+    "  for(int i=0;i<100;i++) printf(\"HEY4!\")\n",
     "  const void* interp_coords[3] \n",
     "    = { (const void *) point_x_temp,\n",
     "        (const void *) point_y_temp,\n",
@@ -185,6 +190,7 @@
     "      exit(1);\n",
     "    }\n",
     "  }\n",
+    "  for(int i=0;i<100;i++) printf(\"HEY5!\")\n",
     "\n",
     "  CCTK_INT output_array_types[NUM_OUTPUT_ARRAYS];\n",
     "  for(int i = 0 ; i < NUM_OUTPUT_ARRAYS ; i++) {\n",
@@ -193,6 +199,7 @@
     "\n",
     "  void * output_arrays[NUM_OUTPUT_ARRAYS]\n",
     "    = { (void *) output_f[0] };\n",
+    "  for(int i=0;i<100;i++) printf(\"HEY6!\")\n",
     "\n",
     "  // actual interpolation call\n",
     "  ierr = CCTK_InterpGridArrays(cctkGH,\n",
@@ -208,6 +215,7 @@
     "                               NUM_OUTPUT_ARRAYS, // Number of output arrays\n",
     "                               output_array_types,\n",
     "                               output_arrays);\n",
+    "  for(int i=0;i<100;i++) printf(\"HEY7!\")\n",
     "  if (ierr<0) {\n",
     "    CCTK_WARN(1,\"interpolation screwed up\");\n",
     "    Util_TableDestroy(param_table_handle);\n",
@@ -549,9 +557,8 @@
     "            time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
-    "            Interpolate_to_sph_grid(cctkGH, 0, order,\n",
-    "                                    NULL,NULL,NULL,NULL,NULL);\n",
-    "//                                    faceim_points_x,faceim_points_y,faceim_points_z, input_array_names, output_f);\n",
+    "            Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
+    "                                    faceim_points_x,faceim_points_y,faceim_points_z, input_array_names, output_f);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
     "        }\n",
     "\n",
@@ -560,7 +567,7 @@
     "            get_gf_name(*InterpCounter,gf_name); // Reset gf_name\n",
     "            printf(\"facejm: Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
     "            Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
-    "                                    faceim_points_x,faceim_points_y,faceim_points_z, input_array_names, output_f);\n",
+    "                                    facejm_points_x,facejm_points_y,facejm_points_z, input_array_names, output_f);\n",
     "            snprintf(gf_name,100,\"facejm (i,j-1/2,k): %s\",gf_name);\n",
     "#pragma omp parallel for\n",
     "            for(int i=0;i<N0*N1*N2;i++) {\n",
@@ -574,8 +581,8 @@
     "            time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
-    "            Interpolate_to_sph_grid(cctkGH, 0, order,\n",
-    "                                    NULL,NULL,NULL,NULL,NULL);\n",
+    "            Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
+    "                                    facejm_points_x,facejm_points_y,facejm_points_z, input_array_names, output_f);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
     "        }\n",
     "\n",
@@ -598,8 +605,8 @@
     "            time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
-    "            Interpolate_to_sph_grid(cctkGH, 0, order,\n",
-    "                                    NULL,NULL,NULL,NULL,NULL);\n",
+    "            Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
+    "                                    facekm_points_x,facekm_points_y,facekm_points_z, input_array_names, output_f);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
     "        }\n",
     "\n",
@@ -622,8 +629,8 @@
     "            time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "            printf(\"Finished in %e seconds. Interpolate_to_sph_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
     "        } else {\n",
-    "            Interpolate_to_sph_grid(cctkGH, 0, order,\n",
-    "                                    NULL,NULL,NULL,NULL,NULL);\n",
+    "            Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
+    "                                    corner_points_x,corner_points_y,corner_points_z, input_array_names, output_f);\n",
     "            printf(\"Interpolate_to_sph_grid_main_function(): Process !=0 waiting for file output at iteration %d\\n\",cctk_iteration);\n",
     "        }\n",
     "    } // END if(strncmp(gf_name,\"4-\",2) == 0)\n",
