--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -246,35 +246,34 @@
     "  // The name of the input gridfunction is always \"interp_arbgrid_MO_ETK::interped_gf\":\n",
     "  const CCTK_STRING input_array_names[1] = { \"interp_arbgrid_MO_ETK::interped_gf\" };\n",
     "  CCTK_REAL *points_x,*points_y,*points_z,**output_f;\n",
-    "  if(CCTK_MyProc(cctkGH)==0) {\n",
-    "      // For benchmarking purposes:\n",
-    "      time_t start_timer,end_timer;\n",
-    "      time(&start_timer); // Resolution of one second...\n",
-    "      CCTK_REAL time_in_seconds;\n",
+    "  // For benchmarking purposes:\n",
+    "  time_t start_timer,end_timer;\n",
+    "  time(&start_timer); // Resolution of one second...\n",
+    "  CCTK_REAL time_in_seconds;\n",
     "\n",
+    "  if(CCTK_MyProc(cctkGH)==0) {\n",
     "      // Step 1: Read list of desired interpolation destination points from file:\n",
-    "      \n",
+    "\n",
     "      // Step 1.a: Read integer at top of file indicating number of points.\n",
     "      int num_interp_points,  num_interp_pointsx,num_interp_pointsy,num_interp_pointsz;\n",
-    "\n",
     "      char pointsx_filename[100]; snprintf(pointsx_filename,100,\"%s-x.dat\",filename_basename);\n",
     "      printf(\"Reading list of x data points from file %s...\\n\",pointsx_filename);\n",
     "      FILE *pointsx_file = fopen(pointsx_filename, \"rb\");\n",
     "      if(!pointsx_file) { printf(\"Error: Unable to open %s\\n\",pointsx_filename); exit(1); }\n",
     "      fread(&num_interp_pointsx, sizeof(int), 1, pointsx_file);\n",
-    "      \n",
+    "\n",
     "      char pointsy_filename[100]; snprintf(pointsy_filename,100,\"%s-y.dat\",filename_basename);\n",
     "      printf(\"Reading list of y data points from file %s...\\n\",pointsy_filename);\n",
     "      FILE *pointsy_file = fopen(pointsy_filename, \"rb\");\n",
     "      if(!pointsy_file) { printf(\"Error: Unable to open %s\\n\",pointsy_filename); exit(1); }\n",
     "      fread(&num_interp_pointsy, sizeof(int), 1, pointsy_file);\n",
-    "      \n",
+    "\n",
     "      char pointsz_filename[100]; snprintf(pointsz_filename,100,\"%s-z.dat\",filename_basename);\n",
     "      printf(\"Reading list of z data points from file %s...\\n\",pointsz_filename);\n",
     "      FILE *pointsz_file = fopen(pointsz_filename, \"rb\");\n",
     "      if(!pointsz_file) { printf(\"Error: Unable to open %s\\n\",pointsz_filename); exit(1); }\n",
     "      fread(&num_interp_pointsz, sizeof(int), 1, pointsz_file);\n",
-    "      \n",
+    "\n",
     "      // Step 1.a.i: Sanity check: make sure that num_interp_pointsx == num_interp_pointsy == num_interp_pointsz\n",
     "      if(num_interp_pointsx != num_interp_pointsy || num_interp_pointsy != num_interp_pointsz) {\n",
     "          printf(\"Error: Failed sanity check. Number of interpolation points different in %s-{x,y,z}.dat data files!\\n\",\n",
@@ -283,19 +282,19 @@
     "      } else {\n",
     "          // If sanity check passes:\n",
     "          num_interp_points = num_interp_pointsx;\n",
-    "      }\n",
-    "      \n",
+    "      } // END sanity check\n",
+    "\n",
     "      // Step 1.b: Allocate memory for destination grids and interpolation output\n",
     "      if(num_interp_points <= 0 || num_interp_points > 2000000000) {\n",
     "          printf(\"Error: Failed sanity check. Number of interpolation points was found to be: %ld\",num_interp_points);\n",
     "          exit(1);\n",
-    "      }\n",
+    "      } // END sanity check\n",
     "      points_x = (CCTK_REAL  *)malloc(sizeof(CCTK_REAL)*num_interp_points);\n",
     "      points_y = (CCTK_REAL  *)malloc(sizeof(CCTK_REAL)*num_interp_points);\n",
     "      points_z = (CCTK_REAL  *)malloc(sizeof(CCTK_REAL)*num_interp_points);\n",
     "      output_f = (CCTK_REAL **)malloc(1 * sizeof(CCTK_REAL *));\n",
     "      for(int cc = 0; cc < 1; cc++) output_f[cc]=(CCTK_REAL *)malloc(num_interp_points * sizeof(CCTK_REAL));\n",
-    "      \n",
+    "\n",
     "      // Step 1.c: Store cell-centered points to allocated memory.\n",
     "      fread(points_x, sizeof(CCTK_REAL), num_interp_points, pointsx_file);\n",
     "      fread(points_y, sizeof(CCTK_REAL), num_interp_points, pointsy_file);\n",
@@ -314,15 +313,18 @@
     "      fclose(pointsz_file);\n",
     "      time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "      printf(\"Finished in %e seconds.\\n\",time_in_seconds);\n",
-    "\n",
-    "      // Step 1.d: Looping over interp order as desired, interpolate to destination points & output to file\n",
-    "      for(int order_i=0; order_i<num_interp_orders; order_i++) {\n",
-    "        int order = interp_orders_list[order_i];\n",
-    "        printf(\"Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
+    "  } // END if(CCTK_MyProc(cctkGH)==0)\n",
+    " \n",
+    "  // Step 1.d: Looping over interp order as desired, interpolate to destination points & output to file\n",
+    "  for(int order_i=0; order_i<num_interp_orders; order_i++) {\n",
+    "    int order = interp_orders_list[order_i];\n",
+    "    printf(\"Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
+    "    if(CCTK_MyProc(cctkGH)==0) {\n",
     "        Interpolate_to_dest_grid(cctkGH, num_interp_points, order,\n",
     "                                 points_x,points_y,points_z, input_array_names, output_f);\n",
+    "\n",
     "        // Step 1.d.i: Sanity check -- check for bad point:\n",
-    "#pragma omp parallel for\n",
+    "    #pragma omp parallel for\n",
     "        for(int i=0;i<num_interp_points;i++) {\n",
     "            if(output_f[0][i] > 1e20) {\n",
     "                printf(\"BAD POINT: %s %d %e %e %e %e\\n\",gf_name,i,points_x[i],points_y[i],points_z[i], output_f[0][i]);\n",
@@ -334,16 +336,20 @@
     "        output_to_file(CCTK_PASS_CTOC,gf_name,&order,&num_interp_points,output_f);\n",
     "        time(&end_timer); time_in_seconds = difftime(end_timer,start_timer); time(&start_timer);\n",
     "        printf(\"Finished in %e seconds. Interpolate_to_dest_grid_main_function(): Finished output to file at iteration %d\\n\",time_in_seconds,cctk_iteration);\n",
-    "      }\n",
+    "    } else {\n",
+    "        // On all MPI processes that are nonzero, only call the interpolation function \n",
+    "        //    to ensure the MPI calls from the actual interpolation (driven by proc==0) are seen.\n",
+    "        Interpolate_to_dest_grid(cctkGH, 0, order,\n",
+    "                                 points_x,points_y,points_z, input_array_names, output_f);        \n",
+    "    } // END if(CCTK_MyProc(cctkGH)==0)\n",
+    "  } // END for(int order_i=0; order_i<num_interp_orders; order_i++)\n",
+    "\n",
+    "  if(CCTK_MyProc(cctkGH)==0) {\n",
     "      // Step 1.e: Free memory for destination grids and interpolation output\n",
     "      free(points_x);\n",
     "      free(points_y);\n",
     "      free(points_z);\n",
     "      FREE_2D_GENERIC(CCTK_REAL,output_f,1,num_interp_points);\n",
-    "  } else if(CCTK_MyProc(cctkGH)!=0) {\n",
-    "      int order = 1;\n",
-    "      Interpolate_to_dest_grid(cctkGH, 0, order,\n",
-    "                               points_x,points_y,points_z, input_array_names, output_f);\n",
     "  } // END if(CCTK_MyProc(cctkGH)==0)\n",
     "} // END function\n",
     "#undef ALLOCATE_2D_GENERIC\n",
