Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order: Small fix: variable locality bug

--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -251,11 +251,12 @@
     "  time(&start_timer); // Resolution of one second...\n",
     "  CCTK_REAL time_in_seconds;\n",
     "\n",
+    "  int num_interp_points;\n",
     "  if(CCTK_MyProc(cctkGH)==0) {\n",
     "      // Step 1: Read list of desired interpolation destination points from file:\n",
     "\n",
     "      // Step 1.a: Read integer at top of file indicating number of points.\n",
-    "      int num_interp_points,  num_interp_pointsx,num_interp_pointsy,num_interp_pointsz;\n",
+    "      int num_interp_pointsx,num_interp_pointsy,num_interp_pointsz;\n",
     "      char pointsx_filename[100]; snprintf(pointsx_filename,100,\"%s-x.dat\",filename_basename);\n",
     "      printf(\"Reading list of x data points from file %s...\\n\",pointsx_filename);\n",
     "      FILE *pointsx_file = fopen(pointsx_filename, \"rb\");\n",
