Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order: formatting improvements

--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -354,7 +354,7 @@
    "source": [
     "<a id='fileformat'></a>\n",
     "\n",
-    "## Step 1.b: Outputting to File (File format notes) \\[Back to [top](#top)\\]\n",
+    "## Step 1.b: Outputting to File (File format notes) \\[Back to [top](#toc)\\]\n",
     "$$\\label{fileformat}$$\n",
     "\n",
     "Since they take almost no space relative to the data chunks, we attach the entire metadata to each interpolated function that is output:"
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,17 +859,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting interp_arbgrid_MO_ETK/src/unstagger_A_fields.cc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile interp_arbgrid_MO_ETK/src/unstagger_A_fields.cc\n",
     "\n",
@@ -932,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,17 +1409,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting interp_arbgrid_MO_ETK/src/construct_function_to_interpolate__store_to_interped_gf.cc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile interp_arbgrid_MO_ETK/src/construct_function_to_interpolate__store_to_interped_gf.cc\n",
     "#include <stdio.h>\n",
@@ -1500,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1526,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1536,17 +1520,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting interp_arbgrid_MO_ETK/src/interp_counter.cc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile interp_arbgrid_MO_ETK/src/interp_counter.cc\n",
     "#include <assert.h>\n",
@@ -1606,7 +1582,7 @@
    "source": [
     "<a id='cclfiles'></a>\n",
     "\n",
-    "# Step 3: Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure \\[Back to [top](#top)\\]\n",
+    "# Step 3: Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure \\[Back to [top](#toc)\\]\n",
     "$$\\label{cclfiles}$$\n",
     "\n",
     "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
@@ -1630,17 +1606,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting interp_arbgrid_MO_ETK/src/make.code.defn\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile interp_arbgrid_MO_ETK/src/make.code.defn\n",
     "# Main make.code.defn file for thorn interp_arbgrid_MO_ETK\n",
@@ -1663,17 +1631,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting interp_arbgrid_MO_ETK/interface.ccl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile interp_arbgrid_MO_ETK/interface.ccl\n",
     "\n",
@@ -1722,17 +1682,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting interp_arbgrid_MO_ETK/param.ccl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile interp_arbgrid_MO_ETK/param.ccl\n",
     "\n",
@@ -1816,17 +1768,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting interp_arbgrid_MO_ETK/schedule.ccl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile interp_arbgrid_MO_ETK/schedule.ccl\n",
     "\n",
@@ -2046,27 +1990,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb to latex\n",
-      "[NbConvertApp] Writing 150056 bytes to Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex\n",
